third_party/move/move-compiler-v2/tests/checking/specs/clash_move_spec_function.move
module 0x42::m {

    fun f(): u64 { 1 }

    spec fun f(): u64 { 1 }

    spec module {
        invariant f() > 0;
    }
}
